no compiler, use our repo

--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -3,8 +3,10 @@ MAINTAINER "jbr.osama@gmail.com"
 
 RUN yum update -y && \ 
     yum install  -y yum-fastestmirror epel-release && \
-    yum install -y git curl gcc python-devel && \
-    curl https://raw.githubusercontent.com/OpenSooq/Gloom/master/requirements-rpms.txt | grep -v '#' | xargs yum install -y 
+    yum install git curl && \
+    curl -sSL -o /etc/yum.repos.d/pymongo.repo https://s3-eu-west-1.amazonaws.com/opensooq-packages/pymongo/pymongo.repo && \
+    curl https://raw.githubusercontent.com/OpenSooq/Gloom/master/requirements-rpms.txt | grep -v '#' | xargs yum install -y && \
+    yum clean all
 
 RUN curl -o /usr/local/bin/confd -sSL https://github.com/kelseyhightower/confd/releases/download/v0.11.0/confd-0.11.0-linux-amd64 && \
     chmod +x /usr/local/bin/confd && \
